# tfgselector

./: README.md  pyproject.toml  tfgselector.py
