[tool.poetry]
name = "tfgselector"
version = "0.1.0"
description = ""
authors = ["kiinami <kinami@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
questionary = "^2.0.1"
alive-progress = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
